--- a/client/src/components/card/card.module.css
+++ b/client/src/components/card/card.module.css
@@ -1,22 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font: 500 100%/1.4 system-ui;
-  background-color: #ccc;
-}
-
-body {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  gap: 0rem;
-  padding: 1rem;
-}
+/*  */
 
 .card {
   height: fit-content;
@@ -55,4 +37,19 @@ body {
   font-size: 1rem;
   color: #5e5e89;
   text-align: center;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #efddb6;
+  color: #4a4a7d;
+  text-decoration: none;
+  border-radius: 4px;
+  border: 1px solid black;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #8f794e;
 }
