--- a/client/src/components/navbar/navbar.module.css
+++ b/client/src/components/navbar/navbar.module.css
@@ -1,3 +1,4 @@
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -6,36 +7,14 @@
     color: #fff;
     padding: 1rem;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    position: relative;
   }
-  
-  .navbar-logo {
-    font-family: 'Pacifico', cursive;
-    font-size: 2rem;
-    text-decoration: none;
-    color: #fff;
+
+  .searchInput{
+    padding: 5px;
+    border-radius: 30px;
   }
-  
-  .navbar-menu {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .navbar-menu-item {
-    text-decoration: none;
-    color: #fff;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    transition: background-color 0.3s ease;
-  }
-  
-  .navbar-menu-item:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  
-  .navbar-menu-item-active {
-    background-color: rgba(255, 255, 255, 0.2);
-  }
-  
 
   .button {
     display: inline-block;
