--- a/client/src/components/navbar/navbar.module.css
+++ b/client/src/components/navbar/navbar.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: #333;
     color: #fff;
-    padding: 1rem;
+    padding: 0.1rem;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     position: relative;
@@ -14,23 +14,34 @@
   .searchInput{
     padding: 5px;
     border-radius: 30px;
+    position: relative;
+    left: 20px; /* Ajusta el valor según tus preferencias */
+    top: 20px;
+  }
+
+  .searchButton {
+    margin-left: 10px;
+    position: relative;
+    left: 186px;
+    border-radius: 20px;
+    top: -22px;
+    background-color: brown;
   }
 
   .button {
-    display: inline-block;
     padding: 8px 16px;
-    background-color: #4287f5;
+    background-color: brown;
     color: white;
     text-decoration: none;
-    border-radius: 4px;
+    border-radius: 30px;
     border: none;
     cursor: pointer;
   }
   
   .button:hover {
-    background-color: #3366cc;
+    background-color: #965520;
   }
   
   .button:active {
-    background-color: #27408b;
+    background-color: #965520;
   }
