--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,13 @@
   background-image: url("../src/assets/istockphoto-1164078811-170667a.jpg");
   height: 1505px;
 }
+
+.App-Form {
+  background-image: url("../src/assets/istockphoto-1164078811-170667a.jpg");
+  height: 713px;
+}
+
+.App-Detail {
+  background-image: url("../src/assets/istockphoto-1164078811-170667a.jpg");
+  height: 1000px;
+}
