--- a/client/src/components/pagination/pagination.module.css
+++ b/client/src/components/pagination/pagination.module.css
@@ -8,6 +8,7 @@
   margin-right: 5px;
 }
 
+
 .pageItem.disabled button {
   pointer-events: none;
   opacity: 0.5;
@@ -26,6 +27,18 @@
   cursor: pointer;
 }
 
+
 .page-link:hover {
   background-color: red;
 }
+
+button {
+  background-color: #d29c62;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
