--- a/client/src/views/detail/detail.module.css
+++ b/client/src/views/detail/detail.module.css
@@ -1,5 +1,8 @@
 .container {
-    margin: 20px;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #d6b896;
   }
 
   .image {
@@ -12,28 +15,28 @@
     font-family: "Kalam", cursive;
     font-weight: normal;
     font-size: 1rem;
-    color: #4a4a7d;
+    color: #191938;
     text-align: center;
   }
 
   .Alls {
     font-family: "Kalam", cursive;
     font-size: 1rem;
-    color: #5e5e89;
+    color: #191938;
     text-align: center;
   }
 
   .All {
     font-family: "Kalam", cursive;
     font-size: 1rem;
-    color: #5e5e89;
+    color: #191938;
     text-align: center;
   }
 
   .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4285F4;
+    background-color: brown;
     color: white;
     text-decoration: none;
     border-radius: 4px;
@@ -41,6 +44,6 @@
   }
   
   .button:hover {
-    background-color: #3367D6;
+    background-color: #d6a233;
   }
   
