--- a/client/src/views/form/form.module.css
+++ b/client/src/views/form/form.module.css
@@ -2,7 +2,7 @@
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f0f0f0;
+  background-color: #d2af88;
 }
 
 h2 {
@@ -33,17 +33,17 @@ select {
   margin-bottom: 10px;
 }
 
-button {
-  background-color: #007bff;
+
+.button {
+  background-color: brown;
   color: #fff;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  border: 1px solid black;
 }
 
-.button {
-  display: block;
-  text-align: center;
-  margin-top: 20px;
+.button:hover {
+  background-color: #785f27;
 }
